# snake

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  build.sh  constants.h  main  main.cpp  snake.cpp  snake.h
